Rename python-netaddr to netaddr in pip statement

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ addons:
       - python-pycurl
 install:
   - pip install --upgrade pip
-  - pip install ansible python-netaddr
+  - pip install ansible netaddr
 env:
   global:
     - TEST_ANSIBLE_HOSTNAME: localhost
