add epel-release installation for Centos and introduce `fail2ban_become` option

--- a/tasks/actions.yml
+++ b/tasks/actions.yml
@@ -6,5 +6,5 @@
     group:  "{{ fail2ban_action_group }}"
     mode:   "{{ fail2ban_action_mode }}"
     state:  directory
-  become: true
+  become: "{{ fail2ban_become }}"
 ...
