--- a/tasks/distros/debian.yml
+++ b/tasks/distros/debian.yml
@@ -15,5 +15,5 @@
     state: "{{ 'latest' if fail2ban_pkg_install_latest else 'present' }}"
   notify:
     - restart fail2ban
-  become: true
+  become: "{{ fail2ban_become }}"
 ...
