add option to start fail2ban after the installation

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -27,4 +27,14 @@
     - restart fail2ban
   become: "{{ fail2ban_become }}"
 
+- name: Start fail2ban
+  service:
+    name:  "{{ jumpcloud_agent_service }}"
+    state: started
+  become: "{{ fail2ban_become }}"
+  ignore_errors: true
+  when: fail2ban_start_after_installation
+
+
+
 ...
