--- a/tasks/distros/centos.yml
+++ b/tasks/distros/centos.yml
@@ -19,7 +19,7 @@
   yum:
     name: fail2ban
     state: "{{ 'latest' if fail2ban_pkg_install_latest else 'present' }}"
-  notify:
-    - restart fail2ban
+  # notify:
+  #   - restart fail2ban
   become: "{{ fail2ban_become }}"
 ...
