--- a/tasks/distros/debian.yml
+++ b/tasks/distros/debian.yml
@@ -13,7 +13,7 @@
   apt:
     name: fail2ban
     state: "{{ 'latest' if fail2ban_pkg_install_latest else 'present' }}"
-  notify:
-    - restart fail2ban
+  # notify:
+  #   - restart fail2ban
   become: "{{ fail2ban_become }}"
 ...
