--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -23,17 +23,17 @@
     owner:  "{{ fail2ban_localjail_owner }}"
     group:  "{{ fail2ban_localjail_group }}"
     mode:   "{{ fail2ban_localjail_mode }}"
-  # notify:
-  #   - restart fail2ban
+  notify:
+    - restart fail2ban
   become: "{{ fail2ban_become }}"
 
-- name: Start fail2ban
-  service:
-    name:  "{{ jumpcloud_agent_service }}"
-    state: started
-  become: "{{ fail2ban_become }}"
-  ignore_errors: true
-  when: fail2ban_start_after_installation
+# - name: Start fail2ban
+#   service:
+#     name:  "{{ jumpcloud_agent_service }}"
+#     state: started
+#   become: "{{ fail2ban_become }}"
+#   ignore_errors: true
+#   when: fail2ban_start_after_installation
 
 
 
